# doom

./: .gitignore  Cargo.toml  README.md  gl-triangle-fan-floors-note.rs.txt
src/: backup.rs  camera.rs  camera_old.rs  colors.rs  lib.rs  lumps.rs  main.rs  main_old.rs  main_old.rs.md  map_svg.rs  maps.rs  model.rs  model_old.rs  obj_loader.rs  palette.rs  png_dump.rs  renderer.rs  resources.rs  shader.frag  shader.frag.spv  shader.vert  shader.wgsl  state.rs  state_old.rs  texture.rs  wad_graphics.rs
src-old/: camera.rs  light.wgsl  main.rs  map_svg.rs  model.rs  png_dump.rs  renderer.rs  texture.rs  wad_graphics.rs
src/game/: colors.rs  doom_model.rs  lumps.rs  map_svg.rs  maps.rs  mod.rs  png_dump.rs  scene.rs  wad_graphics.rs
src/old-shaders/: shader.frag
