[package]
name = "doom"
version = "0.1.0"
authors = ["Chris Butcher <cbutcher@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]
name = "doomlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
pollster = "0.2"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
wgpu = { version = "0.13"}
winit = "0.26"
instant = "0.1"

# Doom-specific
# TODO: Update these crates.
svg = "0.9.0"
regex = "1.4.3"
png = "0.16.8"
lyon = "0.17.5"
geo = "0.23.0"
poly2tri = "0.1.0"
earcutr = "0.2.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
