[package]
name = "doom"
version = "0.1.0"
authors = ["Chris Butcher <cbutcher@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]
name = "doomlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0.95"
bytemuck = { version = "1.21", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.11.6"
pollster = "0.4.0"
log = "0.4.22"
tobj = { version = "4.0.2", features = ["async"]}
wgpu = "23.0.1"
winit = { version = "0.29", features = ["rwh_05"] }
instant = "0.1.13"

# Doom-specific
# TODO: Update these crates.
svg = "0.18.0"
regex = "1.11.1"
png = "0.17.16"
lyon = "1.0.1"
geo = "0.29.3"
poly2tri = "0.1.0"
earcutr = "0.4.3"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.13", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3.0"
glob = "0.3.2"
